# cook-screen-3ds

./: Cargo.toml  README.md  build.rs  make-cia
.vim/: coc-settings.json
assets/: assets.t3s  cia.rsf
c/: c2d.c  compile_commands.json  platform.c
romfs/: assets.t3x
src/: app.rs  c2d.rs  constant.rs  lib.rs  log.rs  main.rs  platform.rs  render.rs  resource.rs  utils.rs
src/render/: image_data_set.rs  revent.rs
src/render/rdom/: rdom_style.rs
