[package]
name = "cook-screen"
authors = ["豆汤"]
description = "烤屏工具"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
# Required
shipyard = { git = "https://github.com/iamcco/shipyard", branch = "0.6-32bit" }
# use latest version
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-native-core = { git = "https://github.com/DioxusLabs/blitz" }
dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/blitz" }

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
bitflags = "2.3.3"
widestring = "0.2.2"
tokio = { version = "1.16", features = ["rt-multi-thread", "time", "macros"] }

log = { version = "0.4.20", features = ["std"]}
qrcode-generator = "4.1.9"

dioxus = { version = "0.5.2", default-features = false, features = ["macro", "html", "hooks", "signals"]}
dioxus-core = { version = "0.5.2", default-features = false }
dioxus-html = { version = "0.5.2", default-features = false, features = ["serialize"] }
dioxus-native-core = { version = "0.5.0-alpha.2", default-features = false, features = ["dioxus"] }
dioxus-native-core-macro = { version = "0.5.0-alpha.2", default-features = false }
shipyard = { version = "0.6.2", default-features = false, features = ["proc", "std"] }
taffy = { version = "0.4.3", default-features = false, features = ["std", "taffy_tree", "flexbox", "block_layout", "content_size"] }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cargo-3ds]
name = "Cook Screen"
romfs_dir = "romfs"
icon = "./assets/icon.png"
